Support RBAC for authorization